codex-rs/tui/src/app/snapshots/codex_tui__app__session_usage__tests__session_usage_compact_line.snap
---
source: tui/src/app/session_usage_tests.rs
expression: terminal.backend()
---
"Tokens 1.77K total · parent 1.1K · subagents 675 · F5 hide · /detailed-status                       "
