codex-rs/tui/src/app/snapshots/codex_tui__app__session_usage__tests__session_usage_width_42.snap
---
source: tui/src/app/session_usage_tests.rs
expression: terminal.backend()
---
"Session usage · live                      "
"Root: root                                "
"Tokens, not a bill. Monetary cost         "
"unavailable without verified pricing.     "
"Observed threads only; updates arrive     "
"after model responses, not per token.     "
"                                          "
"Parent     1100 total · 1000 input · 800  "
"cached · 100 output                       "
"Subagents  675 total · 600 input · 300    "
"cached · 75 output                        "
"Total      1775 total · 1600 input · 1100 "
"cached · 175 output                       "
"                                          "
"Usage by model                            "
"Parent · astra                            "
"  1100 total · 1000 input · 800 cached ·  "
"100 output                                "
"Subagents · luna                          "
"  675 total · 600 input · 300 cached · 75 "
"output                                    "
"                                          "
"Agents · completed agents remain included "
"Agent: /root/tests                        "
"  ID child · parent root                  "
"  Completed · current model luna · 1      "
"observed turns · active time 2.5s         "
"  luna: 450 total · 400 input · 200 cached"
"· 50 output                               "
"    reasoning 0 (included in output) ·    "
